docs: paper draft update

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,10 +1,11 @@
-@article{Holten:2009,
-  	Author = {Danny Holten and Jarke J. van Wijk},
-  	Journal = {Eurographics/ IEEE-VGTC Symposium on Visualization 2009},
-  	Keywords = {Picture/ImageGeneration—Line and Curve Generation – Computational Geometry and ObjectModeling—Physically Based Modeling},
-  	Month = mar,
-  	Title = {{Force-Directed Edge Bundling for Graph Visualization}},
-  	Year = 2009
-    number = 3,
-    volume = 28,
+@inproceedings{holten2009force,
+  title={Force-directed edge bundling for graph visualization},
+  author={Holten, Danny and Van Wijk, Jarke J},
+  booktitle={Computer graphics forum},
+  volume={28},
+  number={3},
+  pages={983--990},
+  year={2009},
+  organization={Wiley Online Library},
+  doi={10.1111/j.1467-8659.2009.01450.x}
 }
